--- a/README
+++ b/README
@@ -1,1 +1,15 @@
-VINHBAOBAO 2011065103
+﻿# Thông tin cá nhân:
+- Họ và tên: Vĩnh Bảo Bảo
+- Ngày sinh: 31/10/1994
+- Địa chỉ liên lạc: Chung/Cư Thanh Niên, Tân Bình, Tp. Hồ Chí Minh
+- Số điện thoại: 0773343290
+- Địa chỉ email: jinbao1994@gmail.com
+# Mục tiêu nghề nghiệp
+Tôi muốn trở thành một Senior Front-end Developer
+# Học vấn (Education):
+ĐẠI HỌC CÔNG NGHỆ TPHCM (Hutech)
+08/2020 - HIỆN TẠI
+NGÀNH: Công nghệ thông tin
+Chuyên ngành: Công nghệ phần mềm
+# Kỹ năng (Skills):
+ Front-end
